

	- Killed a bug that lead randomly to slow performance and hangs if someone
	  attempted to access the site with a login session which had expired.

	- Some formatting improvements and changes.

	- Cloning a tournament will now clone sweepstakes rules.

	- Fixed a master ballot formatting issue (Kentucky)

==CHANGES RELEASED 2.7.13==

	- Concessions invoices were not appearing on the full invoice; now they do.

	- Before if you dropped or namechanged an entry with housing, the housing
	  request would land in limbo, and could not be transferred to a new entry.
	  Now, if someone with housing is namechanged, the system will ask the user
	  what they want to do with the housing request; to transfer it or delete
	  it.

	- Debate results can now be displayed under Results -> Event Display, as
	  long as tiebreakers have been set in debate.  Not all tiebreakers have
	  been perfectly tested; but win/loss, points, hi/lo points, opp wins and
	  jvar have.  jvar is calculated differently from TRPC; do not expect them
	  to match.

	- Coaches can now access student records, along with any RFDs and comments
	  entered online, via the student roster; click on Record to the left of any
	  student name.

	- Coaches for the NDT/CEDA circuit can enter debater honors to the NDT bid
	  sheets via the roster/record method as well, as can individual students
	  when they first log in if they are linked to their student record.

	- Fixed a bug that would show incorrect ballot entry status when there were
	  dropped competitors assigned to a round.

	- Added support for APDA registration seeding (Free, Half, Full, None).  It
	  must be enabled in the Event (Settings -> events -> on the left) and will
	  be visible and changeable under the entry's registrant screen.

	- Fixed some formatting.

==CHANGES RELEASED 1.23.13==

	- Fixed a thing where the CSV export would bleed for school names that had
	  a comma in them; and would not list all the students.  Both fixed.
