@@ -1,11 +1,10 @@
 <%args>
 	$tourn
-	$event_id => undef
+	$event => undef
 	$whoami => undef
 </%args>
 <%init>
-	
-	my $event = Tab::Event->retrieve($event_id) if $event_id;
+
 
 </%init>
 
@@ -36,7 +35,7 @@
 %				my $class = "martop" if $oevent->type ne $last_type;
 %				$last_type = $oevent->type;
 
-				<a class="<% $oevent->id == $event_id? "dk" : ""%>blue nowrap <% $class %> block" href="event.mhtml?event_id=<% $oevent->id %>">
+				<a class="<% $event && $oevent->id == $event->id ? "dk" : ""%>blue nowrap <% $class %> block" href="event.mhtml?event_id=<% $oevent->id %>">
 					<% $oevent->name %>
 				</a>
 %			}
@@ -49,8 +48,8 @@
 
 				<h4>Set Motions</h4>
 
-%				foreach my $event ($tourn->events( type => "wudc")) {
-					<a class="blue block" href="motions.mhtml?event_id=<% $event->id %>">
+%				foreach my $o_event ($tourn->events( type => "wudc")) {
+					<a class="blue block" href="motions.mhtml?event_id=<% $o_event->id %>">
 						<% $event->name %>
 					</a>
 %				}
