@@ -131,6 +131,10 @@
 					Edit <% $event->abbr %> Schedule
 				</a>
 
+				<a class="yellow block" href="/panel/round/manual.mhtml?event_id=<% $event->id %>&round_id=<% $round->id %>">
+					Manually schedule round
+				</a>
+
 %				unless ($round->panels) { 
 
 %					my $warn = "You will destroy this round and not get it back.  Are you sure?";
